fix jumbotron tablet display

--- a/css/index.css
+++ b/css/index.css
@@ -279,6 +279,12 @@ p {
 @media (max-width: 800px) {
   .jumbotron .jumbotron--text,
   .jumbotron .jumbotron--text {
+    bottom: 2rem;
+  }
+}
+@media (max-width: 800px) {
+  .jumbotron .jumbotron--text,
+  .jumbotron .jumbotron--text {
     font-size: 5rem;
     line-height: 5.5rem;
   }
