--- a/less/jumbotron.less
+++ b/less/jumbotron.less
@@ -13,6 +13,10 @@
     position: absolute;
     bottom: 5.6rem;
     left: 8%;
+
+    @media @tablet {
+      bottom: 2rem;
+    }
     font-weight: bold;
     color: @clr-home;
     .font-extra()
